# nbformat-cli

./: README.md  pyproject.toml
nbformat_cli/: __main__.py
