[tool.poetry]
name = "nbformat-cli"
version = "0.1.0"
description = ""
authors = ["Ben Skubi <bskubi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
click = "^8.0"
nbformat = "^5.0"

[tool.poetry.scripts]
nbformat-cli = "nbformat_cli.__main__:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
